Replaced calls to Integer constructor.