@@ -144,7 +144,7 @@ public class CmsResourceTypeFolder extends A_CmsResourceTypeFolderBase {
                     Messages.ERR_CONFIG_FROZEN_3,
                     this.getClass().getName(),
                     getStaticTypeName(),
-                    new Integer(getStaticTypeId())));
+                    Integer.valueOf(getStaticTypeId())));
         }
 
         if (!RESOURCE_TYPE_NAME.equals(name)) {
