@@ -612,7 +612,7 @@ public class CmsResourceTypeImage extends A_CmsResourceType {
                     Messages.ERR_CONFIG_FROZEN_3,
                     this.getClass().getName(),
                     getStaticTypeName(),
-                    new Integer(getStaticTypeId())));
+                    Integer.valueOf(getStaticTypeId())));
         }
 
         if (!RESOURCE_TYPE_NAME.equals(name)) {
